# hfs-project

./: Cargo.toml  README.md
doc/: chunkserver.txt  masterserver.txt
hfs-cli/: Cargo.toml
hfs-cli/src/: auth.rs  cd.rs  command.rs  get.rs  lib.rs  ls.rs  main.rs  mkdir.rs  mv.rs  put.rs  rm.rs
hfs-proto/: Cargo.toml  volo.yml
hfs-proto/protos/: chunk.proto  cluster.proto  lease.proto  master.proto
hfs-proto/src/: lib.rs
hfs-server/: Cargo.toml
hfs-server/old_code/: cluster_chunk_instance.rs  cluster_chunk_server.rs  cluster_guard.rs  cluster_guard_old.rs  cluster_server_old.rs  file_system_old.rs  handle_old1.rs  handle_old2.rs  handler_old.rs  lease_server.rs  node_old.rs  ns_server.rs  ns_server_old1.rs  packet_old.rs  ts_receiver_old.rs
hfs-server/src/: grpc_client.rs  lib.rs  server_old.rs  shutdown.rs
hfs-server/src/auth/: error.rs  manager.rs  mod.rs  permissions.rs  server.rs  service.rs
hfs-server/src/chunk/: mod.rs
hfs-server/src/chunk/chunkserver/: manager.rs  mod.rs  replica.rs  service.rs
hfs-server/src/chunk/masterserver/: manager.rs  meta.rs  mod.rs  service.rs
hfs-server/src/cluster/: error.rs  mod.rs  server.rs  service.rs  watcher.rs
hfs-server/src/lease/: error.rs  lease.rs  lessor.rs  mod.rs  service.rs
hfs-server/src/namespace/: error.rs  file_system.rs  mod.rs  node.rs  path.rs  service.rs
hfs-server/src/server/: chunk.rs  master.rs  mod.rs
hfs-server/src/transport/: checksum.rs  message.rs  mod.rs  packet.rs  replica_file.rs  utils.rs
hfs-server/src/transport/chunkserver/: copy.rs  download.rs  mod.rs  replica.rs  service.rs  upload.rs
hfs-server/src/transport/client/: input.rs  output.rs
hfs-server/src/util/: gen_id.rs  grpc.rs  mod.rs  search.rs  time.rs
hfs-util/: Cargo.toml.txt
hfs-util/src/: lib.rs
hfs-util/src/wdlock/: error.rs  lease.rs  mod.rs
hfs-util/src/wdlock/server/: context.rs  dlock.rs  mod.rs
