[workspace]
members = [
    "hfs-server",
    "hfs-proto",
    "hfs-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"

faststr = "0.2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = "1"
bytes = "1"
ahash = "0.8"
tracing = "0.1"
lazy_static = "1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
