[package]
name = "hfs-cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hfs-proto = { path = "../hfs-proto" }
hfs-server = { path = "../hfs-server" }

clap = { version = "4.5.4", features = ["derive"] }
rustyline = "14.0.0"

faststr.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
chrono = "0.4.38"
