[package]
name = "hfs-proto"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

pilota.workspace = true
volo.workspace = true
volo-grpc.workspace = true

[build-dependencies]
volo-build.workspace = true